--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "redux-thunk": "^2.2.0",
     "regenerator-runtime": "^0.11.0",
     "seamless-immutable": "^7.1.2",
-    "web3": "^1.0.0-beta.23"
+    "web3": "^1.0.0-beta.23",
+    "web3-provider-engine": "^13.3.2"
   },
   "engines": {
     "node": ">=7",
