add moment, reverse transaction order

--- a/package.json
+++ b/package.json
@@ -91,7 +91,9 @@
     "koa-router": "^7.2.1",
     "koa-send": "^4.1.0",
     "koa-sslify": "^2.1.2",
+    "lodash": "^4.17.4",
     "microseconds": "^0.1.0",
+    "moment": "^2.19.1",
     "prop-types": "^15.5.10",
     "react": "^16.0.0-rc.2",
     "react-apollo": "^1.4.15",
