--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   },
   "dependencies": {
     "0x.js": "^0.21.4",
+    "abi-decoder": "^1.0.9",
     "apollo-local-query": "^0.3.0",
     "apollo-server-koa": "^1.1.7",
     "axios": "^0.17.0",
@@ -88,8 +89,8 @@
     "chalk": "^2.1.0",
     "graphql": "^0.11.7",
     "graphql-request": "^1.4.0",
-    "immutability-helper": "^2.4.0",
     "history": "^4.7.2",
+    "immutability-helper": "^2.4.0",
     "ip": "^1.1.5",
     "isomorphic-fetch": "^2.2.1",
     "kcors": "^2.2.1",
